[package]
name = "rtic-util"
version = "0.1.0"
authors = ["Per Lindgren <per.lindgren@ltu.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1"
proc-macro-error = "1"
quote = "1"

[dependencies.syn]
features = ["extra-traits", "full"]
version = "1.0.71"